fixed vh and layout issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -107,11 +107,15 @@
 
 
 body{
-    background-image: url('../imgs/blob-scene-haikei\ \(7\).svg');
+    background-image: url('../imgs/blob-scene-haikei\ \(4\).svg');
     background-repeat: no-repeat;
     background-size:cover;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: #3a78ffec;
+   
+    overflow: auto;
+    
+    height: 100vh;
     
 }
 button:focus,
@@ -208,7 +212,8 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-  
+  overflow-y: scroll;
+  height: 80%;
    background-color:white;
    margin-left: 10%;
     margin-right: 10%;
